<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:layout_width="323dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/Name"
            android:ems="10"
            android:id="@+id/Name"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:imeActionId="@+id/checkem"
            android:hint="@string/email"
            android:id="@+id/Email"
            android:layout_row="1"
            android:layout_column="0" />

        <com.subhrajyoti.passwordview.PasswordView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:id="@+id/Pass"
            android:layout_row="2"
            android:layout_column="0" />

        <com.subhrajyoti.passwordview.PasswordView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confp"
            android:ems="10"
            android:password="true"
            android:id="@+id/Conf_pass"
            android:layout_row="3"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/ced"
            android:ems="10"
            android:id="@+id/Ced"
            android:layout_row="4"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Addr"
            android:hint="@string/addrr"
            android:layout_row="5"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/bdate"
            android:ems="10"
            android:id="@+id/Bdate"
            android:layout_row="6"
            android:layout_column="0" />

        <epatec.epatecdesk.MaskedEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/phone"
            android:ems="10"
            app:mask="9999-9999"
            app:placeholder=" "
            android:id="@+id/Phone"
            android:layout_row="7"
            android:layout_column="0" />

        <Button
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:id="@+id/Register"
            android:layout_row="8"
            android:layout_column="0"
            android:foregroundGravity="center_horizontal"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/alclient"
            android:id="@+id/textView3"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/Log_in"
            android:text="@string/Log"
            android:textColor="@color/purple"
            android:layout_row="10"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

    </GridLayout>
</GridLayout>